Chart/commons-cli-normal/tests%20250617002527/compiler_output/CompilerOutput-TextStyle_13_1Test.java.txt
/home/usc/ChatUniTest-python/Chart/commons-cli-normal/tests%20250617002527/test_cases/TextStyle_13_1Test.java:14: error: cannot find symbol
        TextStyle textStyle = builder.alignment(TextStyle.Alignment.LEFT)
                                     ^
  symbol:   method alignment(Alignment)
  location: variable builder of type Builder
1 error
